style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;

}

body{
    font-family: 'inter', sans-serif;
}

.container {
    width: 1120px;
    margin: auto;

}

ul{
    list-style: none;
}

.d-flex{
    display: flex;
    align-items: center;
}

.justify-content-between{
    justify-content: space-between;
}

h1.logo{
    font-size: 30px;
    text-transform: uppercase;
}

ul.nav-menu li{
    text-decoration: none;
    padding: 20px;
}

ul.nav-menu li a{
    text-decoration: none;
    color: #2292;
    font-size: 16px;
    text-transform: uppercase;

}

button.change-mode{
    border: 0;
    background: red;
    font-size: 25px;
    padding: 8px 13px;
    color: #ffff;
    border-radius: 50%;
    cursor: pointer;
}

ul.nav-menu li:last-child{
    padding: 0;
}

.home-text h2{
    font-size: 30px;
    font-weight: 500;
    padding: 20px 0;
    color: #333333;


}

.home-text span{
    font-size: 22px;
    text-transform: capitalize;
    font-weight: 600;
    color: #333333;
}

.home-text h1{
    font-size: 60px;
    padding: 20px 0;
    color: #1f050599;
    position: relative;
   
}

.home-text h1 ::after{
    content: '';
    width: 150px;
    height: 4px;
    background: #ea4020;
    position: absolute;
    left: 0;
    bottom: 0;
}

.home-text{
    width: 450px;
}

.home-text p{
    font-size: 16px;
    color: #333333;
    line-height: 30px;
    padding-bottom: 40px;
}

.home-text a{
    text-decoration: none;
    font-size: 16px;
    text-transform: uppercase;
    color: #ffffff;
    background: #ea4020;
    padding: 15px 30px;
    font-weight: 600;
    border-radius: 5px;
}

.home-text h2 span{
    padding-left: 8px;
    border-right: 3px solid;
    font-size: 30px;
    font-weight: 500;
}

.home-img{
    width: 350px;
    height: 350px;
    border: 15px solid;
    border-color: #292929;
    border-radius: 50% 50% 0% 50%;
    overflow: hidden;
    position: relative;
}


.home-img img{
    width: 100%;
    height: 100%;
}

.home-img-border{
    position: relative;
}

.border-img::after{
    content: '';
    width: 1800px;
    position: absolute;
    border: 15px solid;
    border-color: #ea4020;
    top: 0;
    bottom: 0;
    right: 0;
}

@keyframes color {
    0%   { background: #33CCCC; }
    20%  { background: #33CC36; }
    40%  { background: #B8CC33; }
    60%  { background: #FCCA00; }
    80%  { background: #33CC36; }
    100% { background: #33CCCC; }
  }
  
  body {
    background: #33CCCC; /* Fallback */
    animation: color 9s infinite linear;
    text-align: center;
    padding: 2em;
  }
  h1 {
    text-align: center;
    font-family: 'Kavoon', sans-serif;
    font-size: 2.5em;
    color: white;
  }


  .animate-charcter
{
   text-transform: uppercase;
  background-image: linear-gradient(
    -225deg,
    red 0%,
    darkblue 29%,
    azure 67%,
    darkgreen 100%
  );
  background-size: auto auto;
  background-clip: border-box;
  background-size: 200% auto;
  color: #fff;
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  animation: textclip 2s linear infinite;
  display: inline-block;
      font-size: 190px;
}

@keyframes textclip {
  to {
    background-position: 200% center;
  }
}



.title-word {
    animation: color-animation 4s linear infinite;
  }
  
  .title-word-1 {
    --color-1: #DF8453;
    --color-2: #3D8DAE;
    --color-3: #E4A9A8;
  }
  
  .title-word-2 {
    --color-1: #DBAD4A;
    --color-2: #ACCFCB;
    --color-3: #17494D;
  }
  
  .title-word-3 {
    --color-1: #ACCFCB;
    --color-2: #E4A9A8;
    --color-3: #ACCFCB;
  }
  
  .title-word-4 {
    --color-1: #3D8DAE;
    --color-2: #DF8453;
    --color-3: #E4A9A8;
  }
  
  @keyframes color-animation {
    0%    {color: var(--color-1)}
    32%   {color: var(--color-1)}
    33%   {color: var(--color-2)}
    65%   {color: var(--color-2)}
    66%   {color: var(--color-3)}
    99%   {color: var(--color-3)}
    100%  {color: var(--color-1)}
  }
  
  /* Here are just some visual styles. 🖌 */
  
  .container {
    display: grid;
    place-items: center;  
    text-align: center;
    height: 100vh
  }
  
  .title {
    font-family: "Montserrat", sans-serif;
    font-weight: 800;
    font-size: 8.5vw;
    text-transform: uppercase;
  }

  
  /* This only changes this particular animation duration */
.animate__animated.animate__bounce {
    --animate-duration: 20s;
  }
  
  /* This changes all the animations globally */
  .animate__animated.animate__bounce:root {
    --animate-duration: 20s;
    --animate-delay: 0.1s;
  }

    :root {
      --card-height: 40vw;
      --card-margin: 4vw;
      --card-top-offset: 1em;
      --numcards: 4;
      --outline-width: 0px;
    }
  
    #cards {
      padding-bottom: calc(var(--numcards) * var(--card-top-offset));
      /* Make place at bottom, as items will slide to that position*/
      margin-bottom: var(--card-margin);
      /* Don't include the --card-margin in padding, as that will affect the scroll-timeline*/
    }
  
    #card_1 {
      --index: 1;
    }
  
    #card_2 {
      --index: 2;
    }
  
    #card_3 {
      --index: 3;
    }
  
    #card_4 {
      --index: 4;
    }
  
    .card {
      position: sticky;
      top: 0;
      padding-top: calc(var(--index) * var(--card-top-offset));
    }
  
    @supports (animation-timeline: works) {
  
       @scroll-timeline cards-element-scrolls-in-body {
        source: selector(body);
        scroll-offsets:
          /* Start when the start edge touches the top of the scrollport */
          selector(#cards) start 1,
          /* End when the start edge touches the start of the scrollport */
          selector(#cards) start 0;
        start: selector(#cards) start 1;
        /* Start when the start edge touches the top of the scrollport */
        end: selector(#cards) start 0;
        /* End when the start edge touches the start of the scrollport */
        time-range: 4s;
      }
  
      .card {
        --index0: calc(var(--index) - 1);
        /* 0-based index */
        --reverse-index: calc(var(--numcards) - var(--index0));
        /* reverse index */
        --reverse-index0: calc(var(--reverse-index) - 1);
        /* 0-based reverse index */
      }
  
      .card__content {
        transform-origin: 50% 0%;
        will-change: transform;
  
        --duration: calc(var(--reverse-index0) * 1s);
        --delay: calc(var(--index0) * 1s);
  
        animation: var(--duration) linear scale var(--delay) forwards;
        animation-timeline: cards-element-scrolls-in-body;
      }
  
      @keyframes scale {
        to {
          transform:
            scale(calc(1.1 - calc(0.1 * var(--reverse-index))));
        }
      }
    }
  
    /** DEBUG **/
  
    #debug {
      position: fixed;
      top: 1em;
      left: 1em;
    }
  
    #debug::after {
      content: " Show Debug";
      margin-left: 1.5em;
      color: white;
      white-space: nowrap;
    }
  
    #debug:checked~main {
      --outline-width: 1px;
    }
  
  
    /** PAGE STYLING **/
  
    * {
      /* Poor Man's Reset */
      box-sizing: border-box;
      margin: 0;
      padding: 0;
    }
  
    body {
      background: rgb(58 29 43);
      color: rgb(255, 255, 255);
      text-align: center;
  
      font-size: calc(1em + 0.5vw);
    }
  
    header,
    main {
      width: 80vw;
      margin: 0 auto;
    }
  
    header {
      height: 100vh;
      display: grid;
      place-items: center;
    }
  
    #cards {
      list-style: none;
      outline: calc(var(--outline-width) * 10) solid blue;
  
      display: grid;
      grid-template-columns: 1fr;
      grid-template-rows: repeat(var(--numcards), var(--card-height));
      gap: var(--card-margin);
    }
  
    .card {
      outline: var(--outline-width) solid hotpink;
    }
  
    .card__content {
      box-shadow: 0 0.2em 1em rgba(0, 0, 0, 0.1), 0 1em 2em rgba(0, 0, 0, 0.1);
      background: rgb(255, 255, 255);
      color: rgb(10, 5, 7);
      border-radius: 1em;
      overflow: hidden;
  
      display: grid;
      grid-template-areas: "text img";
      grid-template-columns: 1fr 1fr;
      grid-template-rows: auto;
  
      align-items: stretch;
      outline: var(--outline-width) solid lime;
    }
  
    .card__content>div {
      grid-area: text;
      width: 80%;
      place-self: center;
      text-align: left;
  
      display: grid;
      gap: 1em;
      place-items: start;
    }
  
    .card__content>figure {
      grid-area: img;
      overflow: hidden;
    }
  
    .card__content>figure>img {
      width: 100%;
      height: 100%;
      object-fit: cover;
    }
  
    h1 {
      font-weight: 300;
      font-size: 3.5em;
    }
  
    h2 {
      font-weight: 300;
      font-size: 2.5em;
    }
  
    p {
      font-family: sans-serif;
      font-weight: 300;
      line-height: 1.42;
    }
  
    .btn {
      background: rgb(188 87 36);
      color: rgb(255 255 255);
      text-decoration: none;
      display: inline-block;
      padding: 0.5em;
      border-radius: 0.25em;
    }
  
    aside {
      width: 50vw;
      margin: 0 auto;
      text-align: left;
    }
  
    aside p {
      margin-bottom: 1em;
    }

    .contactcleur{
      color: white;
      border: 2px solid white;
      padding: 10px;
   }

   .contact{
    background: #33CCCC;
    border: 1px solid;
    height: 340px;
    width: 400px;
    
   }

  

